@@ -1,3 +1,8 @@
+2015-01-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.c:
+	  Optimize comparisons of cheap variables to expensive constants more.
+
 2015-01-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCast.c:
